gcp/kube-prometheus-stack/_backup/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "example-gke-prometheus-lb-ip"
    networking.gke.io/managed-certificates: "prometheus-certificate"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: prometheus-frontend-config
spec:
  rules:
  - host: prometheus.somaz.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
